# string

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  RESULT.md  TASK.md  interface.txt  makefile
.github/workflows/: cmake.yml  docs.yml
examples/: CMakeLists.txt  cli.cpp
src/: main.cpp
string/: CMakeLists.txt
string-class/: makefile
string-class/modules/string/src/: string.cpp
string-class/src/: main.cpp
string/include/own/: binstr.h  identstr.h  string.h
string/src/: binstr.cpp  identstr.cpp  string.cpp
string/test/: test_binstr.cpp  test_identstr.cpp  test_string.cpp
